cleaned up extractor and updating pre-auths for controllers in booking module